--- a/_config/config.yml
+++ b/_config/config.yml
@@ -1,3 +1,7 @@
 ---
 Name: silverstripe-elemental-textimage
 ---
+ATW\ElementalTextImage\Models\ElementTextImage:
+  styles:
+    section--imageright: 'Image right'
+    section--imageleft: 'Image left'
