Using new base element.

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -2,6 +2,6 @@
 Name: silverstripe-elemental-textimage
 ---
 ATW\ElementalTextImage\Models\ElementTextImage:
-  styles:
+  variants:
     section--imageright: 'Image right'
     section--imageleft: 'Image left'
