--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,13 @@
         }
     ],
     "require": {
-        "dnadesign/silverstripe-elemental": "^3.0"
-    }
+        "dnadesign/silverstripe-elemental": "^3.0",
+        "silverstripe-elemental-base": "dev-master"
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@github.com:adiwidjaja/silverstripe-elemental-base.git"
+        }
+    ]
 }
