--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-    "name": "adiwidjaja/silverstripe-elemental-textimage",
+    "name": "huubl/silverstripe-elemental-textimage",
     "description": "TextImage Element for Silverstripe",
     "type": "silverstripe-vendormodule",
     "license": "BSD-3-Clause",
     "authors": [
         {
-            "name": "Andy Adiwidjaja",
+            "name": "Huubl",
             "email": "adiwidjaja@gmail.com"
         }
     ],
@@ -16,7 +16,7 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "git@github.com:adiwidjaja/silverstripe-elemental-base.git"
+            "url": "git@github.com:huubl/silverstripe-elemental-base.git"
         }
     ],
     "minimum-stability": "dev",
