--- a/_config/config.yml
+++ b/_config/config.yml
@@ -1,7 +1,7 @@
 ---
 Name: silverstripe-elemental-textimage
 ---
-ATW\ElementalTextImage\Models\ElementTextImage:
+huubl\ElementalTextImage\Models\ElementTextImage:
   variants:
     section--imageright: 'Image right'
     section--imageleft: 'Image left'
