--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "require": {
         "dnadesign/silverstripe-elemental": "*"
+        "huubl/silverstripe-elemental-base": "*"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
