--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "repositories": [
         {
             "type": "vcs",
-            "url": "https://github.com/huubl/silverstripe-responsive-images.git"
+            "url": "https://github.com/huubl/silverstripe-responsive-images"
         }
     ],
     "minimum-stability": "dev",
