--- a/_config/config.yml
+++ b/_config/config.yml
@@ -1,3 +1,19 @@
 ---
 Name: silverstripe-elemental-textimage
 ---
+
+---
+After: 'silverstripe-responsive-images/*'
+---
+Heyday\ResponsiveImages\ResponsiveImageExtension:
+  sets:
+    ResponsiveTextImage:
+      css_classes: img-fit
+      arguments:
+        '(min-width: 1000px) and (min-device-pixel-ratio: 2.0)': [1800, 1400]
+        '(min-width: 1000px)': [1200, 1000]
+        '(min-width: 800px) and (min-device-pixel-ratio: 2.0)': [1600, 1200]
+        '(min-width: 800px)': [800, 600]
+        '(min-width: 400px) and (min-device-pixel-ratio: 2.0)': [1200, 800]
+        '(min-width: 400px)': [600, 400]
+      default_arguments: [1200, 800]
