--- a/_config/config.yml
+++ b/_config/config.yml
@@ -9,9 +9,10 @@ Heyday\ResponsiveImages\ResponsiveImageExtension:
   sets:
     ResponsiveTextImage:
       css_classes: img-fit
+      method: Fill
       arguments:
-        '(min-width: 1000px) and (min-device-pixel-ratio: 2.0)': [1800, 1400]
-        '(min-width: 1000px)': [1200, 1000]
+        '(min-width: 1280px) and (min-device-pixel-ratio: 2.0)': [1800, 1400]
+        '(min-width: 1280px)': [1200, 1000]
         '(min-width: 800px) and (min-device-pixel-ratio: 2.0)': [1600, 1200]
         '(min-width: 800px)': [800, 600]
         '(min-width: 400px) and (min-device-pixel-ratio: 2.0)': [1200, 800]
